# tlsassistant

./: .dockerignore  .gitattributes  .gitignore  .pylintrc  CREDITS.md  Dockerfile  INSTALL.sh  LICENSE  README.md  TLSAssistant.sh  analysis_test.json  ciphersuites_converter.py  cleanup.sh  configuration_ocsp.conf  default_android.json  default_file.json  default_ios.json  default_server.json  dependencies.json  install.py  out.config  publiccode.yml  pyproject.toml  pytest.ini  requirements.db  requirements.txt  run.py  test.config  testssl_dump.json  testssl_dump_old.json  testssltest.py
.github/workflows/: ghcr_on_tag.yaml
Analyzer/: checkApk.sh  checkServer.sh
DatabaseFiller/: database_filler.py  guidelines.xlsx  output.prisma  requirements.db  requirements.txt  schema_creator.py
DatabaseFiller/schema_generator/: template.prisma
DatabaseFiller/utils/: configs.py  filler_utils.py
Evaluator/: enumerator.sh  reportHandler.sh
Evaluator/AttackTrees/: BreakAuthentication.dot  BreakConfidentiality.dot
Evaluator/Mitigations/: 3SHAKE.xml  (+25 more)
configs/: module_to_mitigation.json  tls_rules.json
docs/: Makefile  conf.py  index.js  index.rst  make.bat  run.html
modules/: core.py  parse_input_conf.py  report.py  stix.py
new_pdf_test/: hosts_report_test.xml  modules_report_test.xml  reload.py  report_data.py
tests/: __init__.py  certificate_test.py  faulty_configuration.json  hsts_https_test.py  include_configuration.json  jinja_test.py  mallodroid_test.py  nucleus_test.py  parse_conf_test.py  stix_adv_test.py  stix_test.py  super_test.py  test_condition_parser.py  test_configuration.json  testssl_test.py
tlsa/: __init__.py  tlsa.py
useful_scripts/: openssl_releases.py  urls.json
utils/: booleanize.py  ciphersuites.py  colors.py  configuration.py  counter.py  database.py  globals.py  iana2openssl.py  loader.py  logger.py  md.py  mitigations.py  output.py  prune.py  remove_duplicates.py  subdomain_enumeration.py  type.py  urls.py  validation.py
(+365 files in other folders)
