[tool.poetry]
name = "tlsassistant"
version = "3.0.0"
description = "An open-source modular framework capable of identifying a wide range of TLS vulnerabilities and assessing compliance with multiple guidelines. Its actionable report can assist the user in correctly and easily fixing their configurations."
authors = ["Security And Trust Unit, Center for Cybersecurity, Fondazione Bruno Kessler"]
license = "Apache License 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "3.9.2"
androguard = "3.3.5"
tldextract = "3.1.0"
apacheconfig = "0.3.2"
crossplane = "0.5.7"
tlslite-ng = "0.8.0-beta1"
jsonmerge = "1.8.0"
markdown2 = "2.4.0"
Jinja2 = "3.1.4"
stix2 = "3.0.1"
stix2-patterns = "1.3.2"
pyopenssl = "*"
beautifulsoup4 = "*"
pyasn1 = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
