[tool.poetry]
package-mode = false
name = "tlsassistant"
version = "3.1.0"
description = "An open-source modular framework capable of identifying a wide range of TLS vulnerabilities and assessing compliance with multiple guidelines. Its actionable report can assist the user in correctly and easily fixing their configurations."
authors = ["Security And Trust Unit, Center for Cybersecurity, Fondazione Bruno Kessler"]
license = "Apache License 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "=3.8,<3.9.0 || >3.9.0,<3.9.1 || >3.9.1,<4.0"
aiohttp = "3.10.11"
tldextract = "3.1.0"
apacheconfig = "0.3.2"
crossplane = "0.5.7"
cryptography = "44.0.0"
tlslite-ng = "0.8.0-beta5"
jsonmerge = "1.8.0"
markdown2 = "2.4.0"
Jinja2 = "3.1.6"
stix2 = "3.0.1"
stix2-patterns = "2.0.0"
beautifulsoup4 = "4.12.3"
pyasn1 = "0.6.0"
async-timeout = "4.0.3"
idna = "3.10"
pyopenssl = "25.0.0"
requests = "2.32.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
